--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 	<label for="age">Age</label>
 	<input id="age" type="number" required ><br>
 	<label for="dob">Date of Birth</label>
-	<input id="dop" type="date" required ><br>
+	<input id="dob" type="date" required ><br>
 	<label for="password">Password</label>
 	<input id="password" type="password" required ><br>
 	<label for="portfolio">Portfolio URL</label>
